changed function name for some buttons

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!--Add an input line and buttons-->
 
-<hi id="input"></hi> <br> 
-<button onclick="input('C')">C</button> 
-<button onclick="input('=')">=</button> <br> 
+<h1 id="input"></h1> <br> 
+<button onclick="clean('C')">C</button> 
+<button onclick="equal('=')">=</button> <br> 
 <button onclick="input(7)">7</button> 
 <button onclick="input(8)">8</button> 
 <button onclick="input(9)">9</button> 
-<button onclick="input('+')">+</button> <br> 
+<button onclick="operator('+')">+</button> <br> 
 <button onclick="input(4)">4</button> 
 <button onclick="input(5)">5</button> 
 <button onclick="input(6)">6</button> 
-<button onclick="input('-')">-</button> <br> 
+<button onclick="operator('-')">-</button> <br> 
 <button onclick="input(1)">1</button>
 <button onclick="input(2)">2</button>  
 <button onclick="input(3)">3</button> 
-<button onclick="input('/')">/</button> <br>
+<button onclick="operator('/')">/</button> <br>
 <button onclick="input('.')">.</button> 
 <button onclick="input(0)">0</button> 
-<button onclick="input('%')">%</button> 
-<button onclick="input('*')">*</button> 
+<button onclick="operator('%')">%</button> 
+<button onclick="operator('*')">*</button> 
 <script>
     
 
