--- a/index.html
+++ b/index.html
@@ -40,15 +40,19 @@
     function input(symbol){
 
         //use if/else statement to store input numbers in the desired array
+        //if there isn't any input operator input numbers are saved in the first array
         if (sign==false){
             inputNumber1.push(symbol);
-            joinedNumber1=inputNumber1.join('');
+            //update a variable with join() method and save it as a number
+            joinedNumber1=Number(inputNumber1.join(''));
             console.log(joinedNumber1);
         mainLine.innerText=joinedNumber1;
         }
+        //if there is an input operator input numbers are saved in the second array 
         else {
             inputNumber2.push(symbol);
-            joinedNumber2=inputNumber2.join('');
+            //update a variable with join() method and save it as a number
+            joinedNumber2=Number(inputNumber2.join(''));
             console.log(joinedNumber2);
             mainLine.innerText=joinedNumber1+sign+joinedNumber2;
         }
