updated function equal

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@ function equal (symbol){
     if (sign=="/"){
         mainLine.innerText=joinNumber1/joinNumber2;
     }
+    /*after the calculated result
+    delete contents of arrays and operator
+    for subsequent input of numbers*/
+    inputNumber1.length=0;
+    sign=0;
+    inputNumber2.length=0;
 }
 
       
