updated var joinNumber1 and 2

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     //store an empty array as variable for the first number
     var inputNumber1=[];
     //update inputNumber1 by using join() method
-    var joinNumber1=0;
+    var joinNumber1=[];
      //store another empty array as variable for the second number
      var inputNumber2=[];
      //update inputNumber2 by using join();
-     var joinNumber2=0;
+     var joinNumber2=[];
      //create a variable with empty string to store the input operator  
      var sign="";
 
