--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--Add an input line and buttons-->
 
-<div id="input">
-    <p>0</p></div> <br>  
+<h1 id="input">
+    <p>0</p></h1>> <br>  
 <button onclick="clean('C')">C</button> 
 <button onclick="equal('=')">=</button> <br> 
 <button onclick="input(7)">7</button> 
