changed button location, deleted "."

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!--Add an input line and buttons-->
 
-<h1 id="input">
-    <p>0</p></h1>> <br>  
-<button onclick="clean('C')">C</button> 
-<button onclick="equal('=')">=</button> <br> 
+<h1 id="input"></h1> <br> 
+<button onclick="del('C')">C</button> <br>
 <button onclick="input(7)">7</button> 
 <button onclick="input(8)">8</button> 
 <button onclick="input(9)">9</button> 
@@ -16,10 +14,10 @@
 <button onclick="input(2)">2</button>  
 <button onclick="input(3)">3</button> 
 <button onclick="operator('/')">/</button> <br>
-<button onclick="input('.')">.</button> 
 <button onclick="input(0)">0</button> 
 <button onclick="percentage('%')">%</button> 
 <button onclick="operator('*')">*</button> 
+<button onclick="equal('=')">=</button> 
 <script>
     
 
