--- a/index.html
+++ b/index.html
@@ -34,18 +34,22 @@
      var joinNumber2=[];
      //create a variable with empty string to store the input operator  
      var sign="";
+//create a variable to store calculation results for further use them in the code
+var result=0;
 
-    //add a function that displays input symbols in the input line
-    function input(symbol){
+//add a function that displays input symbols in the input line
+function input(symbol){
 
-        //use if/else statement to store input numbers in the desired array
-        //if there isn't any input operator input numbers are saved in the first array
-        if (sign==false){
-            inputNumber1.push(symbol);
-            //update a variable with join() method and save it as a number
-            joinNumber1=Number(inputNumber1.join(''));
-            console.log(joinNumber1);
-        mainLine.innerText=joinNumber1;
+    //use if/else statement to store input numbers in the desired array
+    //if there isn't any input operator input numbers are saved in the first array
+    if (sign==false){
+        //to start entering numbers from the beginning, reset a result of previous calculation
+        result=0;
+        inputNumber1.push(symbol);
+        //update a variable with join() method and save it as a number
+        joinNumber1=Number(inputNumber1.join(''));
+        console.log(joinNumber1);
+    mainLine.innerText=joinNumber1;
         }
         //if there is an input operator input numbers are saved in the second array 
         else {
