deleted excess lines in the function del

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!--Add an input line and buttons-->
 <center>
+<header>Calculator</header>
 <div id="input"></div> <br> 
 <button onclick="memoryEnt('M+')">M+</button>
 <button onclick="memoryExt('M-')">M-</button>
@@ -175,8 +176,7 @@ empty();}
 function del(){
       result=0;
        empty();
-       joinNumber1=0;
-       joinNumber2=0;
+      
        mainLine.innerText=" ";
 } 
 function memoryEnt(){
