deleted space in var sign

--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@ var joinNumber1=0;
 var joinNumber2=0;
                    
 //create a variable with empty string to store the input operator  
-var sign=" ";
+var sign="";
 
 //create a variable to store calculation results for further use them in the code
 var result=0;
+
+//create a variable memory to store result for further calculation
+var memory="";
 
 //add a function that displays input numbers in a right place by using if/else statement
 function input(symbol) {
